--- a/custom.ipxe.example
+++ b/custom.ipxe.example
@@ -25,7 +25,7 @@ boot || goto custom_exit
 
 :option_two
 kernel https://boot.netboot.xyz/memdisk raw iso
-initrd http://path.to/iso
+initrd http://10.1.30.29/gbglinux_version_3-6-2019.11.21.iso
 boot || goto custom_exit
 
 :option_three
